tests/errors/sem.expected-lvalue.accessee.or
main :: () -> void {
    @subscript index :: (u: &sint, index: sint) -> &sint {
        return u;
    };

    1[3];
};
